// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`call-expression.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// Member expressions
(a?.b)   ();
(a.b?.c)   ();
(a?.b.c)   ();
(a[b?.c])   ();
((a?.b).c)   ();
(a[b?.()])   ();
((a?.b).c)   ();
((a?.()).b)   ();

// Call expressions
(a?.())   ();
(a.b.c?.())   ();
(a.b?.c())   ();
(a?.b.c())   ();
(a(b?.c))   ();
((a?.b)())   ();
((a?.())())   ();

// Not \`.callee\`
foo(a?.b);

// In optional chaining
(a?.b())?.();
(a?.b()).c?.();

=====================================output=====================================
// Member expressions
(a?.b)();
(a.b?.c)();
(a?.b.c)();
a[b?.c]();
(a?.b).c();
a[b?.()]();
(a?.b).c();
(a?.()).b();

// Call expressions
(a?.())();
(a.b.c?.())();
(a.b?.c())();
(a?.b.c())();
a(b?.c)();
(a?.b)()();
(a?.())()();

// Not \`.callee\`
foo(a?.b);

// In optional chaining
a?.b()?.();
(a?.b()).c?.();

================================================================================
`;

exports[`issue-15785-1.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
function someFunctionName(
) {
  return isEqual(a?.map(([t, _]) => t?.id), b?.map(([t, _]) => t?.id));
  return isEqual(a.map(([t, _]) => t?.id), b.map(([t, _]) => t?.id));
}

=====================================output=====================================
function someFunctionName() {
  return isEqual(
    a?.map(([t, _]) => t?.id),
    b?.map(([t, _]) => t?.id),
  );
  return isEqual(
    a.map(([t, _]) => t?.id),
    b.map(([t, _]) => t?.id),
  );
}

================================================================================
`;

exports[`issue-15785-2.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const theValue = Object.entries(someLongObjectName).filter(
  ([listingId]) => someListToCompareToHere?.includes(listingId),
);
const theValue2 = Object.entries(someLongObjectName).filter(
  ([listingId]) => someListToCompareToHere.includes(listingId),
);

=====================================output=====================================
const theValue = Object.entries(someLongObjectName).filter(([listingId]) =>
  someListToCompareToHere?.includes(listingId),
);
const theValue2 = Object.entries(someLongObjectName).filter(([listingId]) =>
  someListToCompareToHere.includes(listingId),
);

================================================================================
`;

exports[`issue-15785-3.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
logger.log(
  \`A long template string with a conditional: \${channel?.id}, and then some more content that continues until \${JSON.stringify(location)}\`
);
logger.log(
  \`A long template string with a conditional: \${channel.id}, and then some more content that continues until \${JSON.stringify(location)}\`
);

=====================================output=====================================
logger.log(
  \`A long template string with a conditional: \${channel?.id}, and then some more content that continues until \${JSON.stringify(location)}\`,
);
logger.log(
  \`A long template string with a conditional: \${channel.id}, and then some more content that continues until \${JSON.stringify(location)}\`,
);

================================================================================
`;

exports[`issue-15912.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
test()
  .test2()
  .test2(thing?.something);

=====================================output=====================================
test().test2().test2(thing?.something);

================================================================================
`;

exports[`issue-15916.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const randomFuncion = (value) => {
    if (value.a) {
        funcA(
            "",
            funcB(
                dayjs(value.a?.toString())
                      .add(1, "day")
                      .toISOString()
            )
        );
    }
};

=====================================output=====================================
const randomFuncion = (value) => {
  if (value.a) {
    funcA("", funcB(dayjs(value.a?.toString()).add(1, "day").toISOString()));
  }
};

================================================================================
`;

exports[`member-chain.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
bifornCringerMoshedPerplexSawder = (
    glimseGlyphsHazardNoopsTieTie
    ?. averredBathersBoxroomBuggyNurl
    ?.anodyneCondosMalateOverateRetinol
  )
  .annularCooeedSplicesWalksWayWay
  .annularCooeedSplicesWalksWayWay(annularCooeedSplicesWalksWayWay)
  .annularCooeedSplicesWalksWayWay();

bifornCringerMoshedPerplexSawder = (
    glimseGlyphsHazardNoopsTieTie
    ?. averredBathersBoxroomBuggyNurl
    ?.anodyneCondosMalateOverateRetinol
  )
  ?.annularCooeedSplicesWalksWayWay
  .annularCooeedSplicesWalksWayWay(annularCooeedSplicesWalksWayWay)
  .annularCooeedSplicesWalksWayWay();

=====================================output=====================================
bifornCringerMoshedPerplexSawder = (glimseGlyphsHazardNoopsTieTie
  ?.averredBathersBoxroomBuggyNurl
  ?.anodyneCondosMalateOverateRetinol).annularCooeedSplicesWalksWayWay
  .annularCooeedSplicesWalksWayWay(annularCooeedSplicesWalksWayWay)
  .annularCooeedSplicesWalksWayWay();

bifornCringerMoshedPerplexSawder =
  glimseGlyphsHazardNoopsTieTie?.averredBathersBoxroomBuggyNurl?.anodyneCondosMalateOverateRetinol?.annularCooeedSplicesWalksWayWay
    .annularCooeedSplicesWalksWayWay(annularCooeedSplicesWalksWayWay)
    .annularCooeedSplicesWalksWayWay();

================================================================================
`;

exports[`member-expression.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// Member expressions
(a?.b)   .foo;
(a.b?.c)   .foo;
(a?.b.c)   .foo;
(a[b?.c])   .foo;
((a?.b).c)   .foo;
(a[b?.()])   .foo;
((a?.b).c)   .foo;
((a?.()).b)   .foo;

// Call expressions
(a?.())   .foo;
(a.b.c?.())   .foo;
(a.b?.c())   .foo;
(a?.b.c())   .foo;
(a(b?.c))   .foo;
((a?.b)())   .foo;
((a?.())())   .foo;

// Not \`.object\`
_[a?.b];

// Computed
(a?.b)   [foo];

// In optional chaining
(a?.b)?.c;
(a?.b).c?.d;

=====================================output=====================================
// Member expressions
(a?.b).foo;
(a.b?.c).foo;
(a?.b.c).foo;
a[b?.c].foo;
(a?.b).c.foo;
a[b?.()].foo;
(a?.b).c.foo;
(a?.()).b.foo;

// Call expressions
(a?.()).foo;
(a.b.c?.()).foo;
(a.b?.c()).foo;
(a?.b.c()).foo;
a(b?.c).foo;
(a?.b)().foo;
(a?.())().foo;

// Not \`.object\`
_[a?.b];

// Computed
(a?.b)[foo];

// In optional chaining
a?.b?.c;
(a?.b).c?.d;

================================================================================
`;

exports[`new-expression.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// Member expressions
new   (a?.b)   ();
new   (a.b?.c)   ();
new   (a?.b.c)   ();
new   (a[b?.c])   ();
new   ((a?.b).c)   ();
new   (a[b?.()])   ();
new   ((a?.b).c)   ();
new   ((a?.()).b)   ();

// Call expressions
new   (a?.())   ();
new   (a.b.c?.())   ();
new   (a.b?.c())   ();
new   (a?.b.c())   ();
new   (a(b?.c))   ();
new   ((a?.b)())   ();
new   ((a?.())())   ();

// Not \`.callee\`
new Foo(a?.b);

// In optional chaining
new ((a?.b)?.c)();

=====================================output=====================================
// Member expressions
new (a?.b)();
new (a.b?.c)();
new (a?.b.c)();
new a[b?.c]();
new (a?.b).c();
new a[b?.()]();
new (a?.b).c();
new (a?.()).b();

// Call expressions
new (a?.())();
new (a.b.c?.())();
new (a.b?.c())();
new (a?.b.c())();
new (a(b?.c))();
new ((a?.b)())();
new ((a?.())())();

// Not \`.callee\`
new Foo(a?.b);

// In optional chaining
new (a?.b?.c)();

================================================================================
`;

exports[`number.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
(1.).toString();
(1.).toString?.();
(1.)?.toString();
(1).toString();
(1)?.toString();

(1.).toString;
(1.)?.toString;

a[1.].toString();
a[1.].toString?.();
a[1.]?.toString();
a?.[1.].toString();

a[1.].toString;
a[1.]?.toString;
a?.[1.].toString;

=====================================output=====================================
(1).toString();
(1).toString?.();
(1)?.toString();
(1).toString();
(1)?.toString();

(1).toString;
(1)?.toString;

a[1].toString();
a[1].toString?.();
a[1]?.toString();
a?.[1].toString();

a[1].toString;
a[1]?.toString;
a?.[1].toString;

================================================================================
`;

exports[`tagged-template-literals.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// Member expressions
(a?.b)   \`\`;
(a.b?.c)   \`\`;
(a?.b.c)   \`\`;
(a[b?.c])   \`\`;
((a?.b).c)   \`\`;
(a[b?.()])   \`\`;
((a?.b).c)   \`\`;
((a?.()).b)   \`\`;

// Call expressions
(a?.())   \`\`;
(a.b.c?.())   \`\`;
(a.b?.c())   \`\`;
(a?.b.c())   \`\`;
(a(b?.c))   \`\`;
((a?.b)())   \`\`;
((a?.())())   \`\`;


// In optional chaining
((a?.b)?.c)  \`\`;

=====================================output=====================================
// Member expressions
(a?.b)\`\`;
(a.b?.c)\`\`;
(a?.b.c)\`\`;
a[b?.c]\`\`;
(a?.b).c\`\`;
a[b?.()]\`\`;
(a?.b).c\`\`;
(a?.()).b\`\`;

// Call expressions
(a?.())\`\`;
(a.b.c?.())\`\`;
(a.b?.c())\`\`;
(a?.b.c())\`\`;
a(b?.c)\`\`;
(a?.b)()\`\`;
(a?.())()\`\`;

// In optional chaining
(a?.b?.c)\`\`;

================================================================================
`;

exports[`test.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
(a?.b).c;
(a?.()).b;

(a?.b)();
(a?.())();

new (a?.b)();
new (a?.())();

=====================================output=====================================
(a?.b).c;
(a?.()).b;

(a?.b)();
(a?.())();

new (a?.b)();
new (a?.())();

================================================================================
`;

exports[`test-2.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{{{{
        const [lastCommittedX, lastCommittedY] =
          multiElement?.lastCommittedPoint ?? [0, 0];
}}}}

=====================================output=====================================
{
  {
    {
      {
        const [lastCommittedX, lastCommittedY] =
          multiElement?.lastCommittedPoint ?? [0, 0];
      }
    }
  }
}

================================================================================
`;

exports[`test-3.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
function getLanguageByInterpreter(languages, file) {
  return languages.find((language) => language.interpreters?.includes(interpreter),
  );
  return languages.find((language) =>language.interpreters.includes(interpreter),
  );
}

=====================================output=====================================
function getLanguageByInterpreter(languages, file) {
  return languages.find((language) =>
    language.interpreters?.includes(interpreter),
  );
  return languages.find((language) =>
    language.interpreters.includes(interpreter),
  );
}

================================================================================
`;

exports[`test-4.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// https://github.com/marmelab/react-admin/blob/8c1ddfeb4e011a94609d709c0f4f139fb5d480e8/packages/ra-data-localstorage/src/index.ts#L112
export default (params) => {
    return {
        updateMany: (resource, params) => {
            updateLocalStorage(() => {
                params.ids.forEach(id => {
                    const index = data.data.data.data.data[resource]?.findIndex(
                        record => record.id == id
                    );
                    const index2 = data.data.data.data.data[resource].findIndex(
                        record => record.id == id
                    );
                    data[resource][index] = {
                        ...data[resource][index],
                        ...params.data,
                    };
                });
            });
            return baseDataProvider.updateMany(resource, params);
        },
    }
}

=====================================output=====================================
// https://github.com/marmelab/react-admin/blob/8c1ddfeb4e011a94609d709c0f4f139fb5d480e8/packages/ra-data-localstorage/src/index.ts#L112
export default (params) => {
  return {
    updateMany: (resource, params) => {
      updateLocalStorage(() => {
        params.ids.forEach((id) => {
          const index = data.data.data.data.data[resource]?.findIndex(
            (record) => record.id == id,
          );
          const index2 = data.data.data.data.data[resource].findIndex(
            (record) => record.id == id,
          );
          data[resource][index] = {
            ...data[resource][index],
            ...params.data,
          };
        });
      });
      return baseDataProvider.updateMany(resource, params);
    },
  };
};

================================================================================
`;
